RTL support for keyboard events and submenus

--- a/demo.html
+++ b/demo.html
@@ -104,6 +104,7 @@ $(function(){
 
         <li><a href="demo/accesskeys.html">Accesskeys</a></li>
         <li><a href="demo/sub-menus.html">Submenus</a></li>
+		<li><a href="demo/sub-menus-rtl.html">Submenus - RTL</a></li>
 
         <li><a href="demo/input.html">Input Commands</a></li>
         <li><a href="demo/custom-command.html">Custom Command Types</a></li>
