--- a/demo/html5-polyfill-firefox8.html
+++ b/demo/html5-polyfill-firefox8.html
@@ -101,6 +101,7 @@ $(function(){
 
         <li><a href="accesskeys.html">Accesskeys</a></li>
         <li><a href="sub-menus.html">Submenus</a></li>
+		<li><a href="sub-menus-rtl.html">Submenus - RTL</a></li>
 
         <li><a href="input.html">Input Commands</a></li>
         <li><a href="custom-command.html">Custom Command Types</a></li>
