--- a/demo/sub-menus_test.html
+++ b/demo/sub-menus_test.html
@@ -38,6 +38,7 @@
     <ul class="menu">
         <li><a href="../index.html">About</a></li>
         <li class="active"><a href="../demo.html">Demo</a></li>
+		<li class="active"><a href="../demo-rtl.html">Demo</a></li>
         <li><a href="../docs.html">Documentation</a></li>
         <li><a href="http://rodneyrehm.de/en/">Author</a></li>
     </ul>
