--- a/demo/sub-menus-rtl.html
+++ b/demo/sub-menus-rtl.html
@@ -34,7 +34,7 @@
 <body>
     <a id="github-forkme" href="https://github.com/medialize/jQuery-contextMenu"><img src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
     <div id="container">
-    <h1><a href="https://github.com/medialize/jQuery-contextMenu">jQuery contextMenu</a></h1>
+    <h1><a href="https://github.com/medialize/jQuery-contextMenu">jQuery contextMenu(with RTL support)</a></h1>
     
     <ul class="menu">
         <li><a href="../index.html">About</a></li>
@@ -43,14 +43,14 @@
         <li><a href="http://rodneyrehm.de/en/">Author</a></li>
     </ul>
 
-    <h2 id="demo">Demo: Submenus</h2>
+    <h2 id="demo">Demo: Submenus - with RTL Mode:true</h2>
     <div class="inline-spaces">
 <div class="context-menu-sub box menu-1">
     <strong>right click me</strong>
 </div>
     </div>
 
-    <h3 id="code">Example code: Submenus - with RTL Mode:true</h3>
+    <h3 id="code">Example code: Submenus</h3>
     <script type="text/javascript" class="showcase">
 $(function(){
     /**************************************************
@@ -126,7 +126,7 @@ $(function(){
 
         <li><a href="accesskeys.html">Accesskeys</a></li>
         <li><a href="sub-menus.html">Submenus</a></li>
-		<li class="current"><a href="sub-menus.html-rtl">Submenus - RTL</a></li>
+		<li class="current"><a href="sub-menus-rtl.html">Submenus - RTL</a></li>
 
         <li><a href="input.html">Input Commands</a></li>
         <li><a href="custom-command.html">Custom Command Types</a></li>
